--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -12,12 +12,16 @@ jobs:
     name: Build and test
     runs-on: ubuntu-latest
 
+    # Service containers to run with `container-job`
     services:
-      db:
-        image: postgres:11
-        ports: ['5432:5432']
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: postgres
+        # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
