--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -12,16 +12,11 @@ jobs:
     name: Build and test
     runs-on: ubuntu-latest
 
-    # Service containers to run with `container-job`
     services:
-      # Label used to access the service container
       postgres:
-        # Docker Hub image
-        image: postgres:11
-        # Provide the password for postgres
+        image: postgres
         env:
           POSTGRES_PASSWORD: postgres
-        # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -42,6 +37,14 @@ jobs:
         path: deps
         key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
         restore-keys: ${{ runner.os }}-mix-
+
+    - name: Check Formatting
+      run: mix format --check-formatted
+
+    - name: Run Credo
+      run: mix credo
+
+    
 
     - name: Install dependencies
       run: mix deps.get
