--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -47,7 +47,17 @@ jobs:
       run: mix format --check-formatted
 
     - name: Run Credo
-      run: mix credo --strict
+      run: mix credo
+
+    - name: Check coverage
+      run: mix coveralls.json
+      env:
+        MIX_ENV: test
+
+    - name: Run CodeCov script
+      run: bash <(curl -s https://codecov.io/bash)
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     
     - name: Run tests
       run: mix test
